apps/production/bandung-coffeeshop-fe/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: prod
  name: bandung-coffeeshop-fe
  labels:
    app: bandung-coffeeshop-fe
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: bandung-coffeeshop-fe
  template:
    metadata:
      labels:
        app: bandung-coffeeshop-fe
    spec:
      containers:
        - name: bandung-coffeeshop-fe
          image: ghcr.io/dta32/bandung-coffeeshop-fe/prod:1790622868-bb1ee7e # {"$imagepolicy": "flux-system:bandung-coffeeshop-fe"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /ready
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 300m
              memory: 512Mi
